fixing contrast issues

--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,10 @@
 body {
   font-family: "Arial", sans-serif;
   background-color: #f4f4f4;
-  color: #333;
+  color: #042a2b;
   text-align: center;
   margin: 0;
-  padding: 0;
+  padding: 50;
 }
 
 h1 {
@@ -15,7 +15,7 @@ h1 {
 
 /* Navigation Styles */
 nav {
-  background-color: #3498db;
+  background-color: #e97bc6;
   padding: 10px;
   border-radius: 8px;
   margin: 20px auto;
@@ -41,7 +41,7 @@ nav ul li a {
   color: white;
   font-weight: bold;
   padding: 10px 15px;
-  background-color: #2980b9;
+  background-color: #70d3e7;
   border-radius: 5px;
   transition: background 0.3s;
 }
